# hspov_proto

./: .gitignore  LICENSE  hspov-proto.cabal
examples/: Example.hs
src/Data/: Povray.hs
src/Data/Povray/: Base.hs  Camera.hs  Colour.hs  Light.hs  Material.hs  Object.hs  ObjectModifiers.hs  Objects.hs  Photon.hs  Pigment.hs  Settings.hs  Texture.hs  Transformation.hs  Types.hs
